example/java/jimmer-sql/src/main/java/org/babyfish/jimmer/sql/example/bll/error/BusinessThrows.java
package org.babyfish.jimmer.sql.example.bll.error;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Retention(RetentionPolicy.RUNTIME)
@Target(ElementType.METHOD)
public @interface BusinessThrows {

    BusinessErrorCode[] value();
}
